--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <meta property="og:image:width" content="1500"/>
 <meta property="og:image:height" content="2264"/>
 <meta itemprop="name" content="Johanna Fulghum"/>
-<meta itemprop="url" content="https://www.susanjfowler.com"/>
-<meta itemprop="description" content="Writer. Engineer. Fledgling Physicist. Amateur Myrmecologist."/>
+<meta itemprop="url" content="https://www.johannafulghum.com"/>
+<meta itemprop="description" content="Writer. Engineer. Economist."/>
 <meta itemprop="thumbnailUrl" content="http://static1.squarespace.com/static/57a6de391b631b6aa4789ebf/t/5dd82f25dcadfc116d1e5b99/1574448937925/91t6KiP1cEL.jpg?format=1500w"/>
 <link rel="image_src" href="http://static1.squarespace.com/static/57a6de391b631b6aa4789ebf/t/5dd82f25dcadfc116d1e5b99/1574448937925/91t6KiP1cEL.jpg?format=1500w" />
 <meta itemprop="image" content="http://static1.squarespace.com/static/57a6de391b631b6aa4789ebf/t/5dd82f25dcadfc116d1e5b99/1574448937925/91t6KiP1cEL.jpg?format=1500w"/>
@@ -45,7 +45,7 @@
 <meta name="twitter:url" content="https://www.susanjfowler.com"/>
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:description" content="Writer. Engineer. Fledgling Physicist. Amateur Myrmecologist."/>
-<meta name="description" content="Writer. Engineer. Fledgling Physicist. Amateur Myrmecologist." />
+<meta name="description" content="Writer. Engineer. Economist." />
 <script type="text/javascript" src="//use.typekit.net/ik/5hWUCNeYwic1iSzXcBlxcfus-E-2JuLBCTJH42LKnICfeztgfFHN4UJLFRbh52jhWD9ajQZqZQwowAJhwDBKFcByF2St5AmKZy7dMPG0SamDjAtlZcNademkOAJXdYJ0SaBujW48Sagyjh90jhNlOeUzjhBC-eNDifUDiWFydKucdaiCZWJljRsCSKoDSWmyScmDSeBRZPoRdhXCSamDjAo7ZcNademkOcFzdPUaiaS0SamDjAtlZcNademkOAJXdYJ0SaBujW48Sagyjh90jhNlOYiaikoDiWFydcTcdaiCZWJ0jhNlJ6ZC-WZzS1q7fbRf9gMMeMb6MKG4fwFbIMMj2KMfH6qJUBMbMg6YJMJ7fbRB9gMMegI6MTMg8FHdzb9.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,200,300i,600,700,700i,900"/>
