--- a/index.html
+++ b/index.html
@@ -12,25 +12,18 @@
 </html> -->
 
 <!doctype html>
-<html xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" lang="en-US" >
 
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <meta name="viewport" content="initial-scale=1">
-
-  <!-- This is Squarespace. --><!-- susan-fowler-b4lr -->
 <base href="">
 <meta charset="utf-8" />
 <title>Johanna Fulghum</title>
-<link rel="shortcut icon" type="image/x-icon" href="https://assets.squarespace.com/universal/default-favicon.ico"/>
-<link rel="canonical" href="https://www.susanjfowler.com"/>
-<meta name="google-site-verification" content="4ljeYcv6pAQpLIzdhnCPi8J50751fJPZ7hF0eysStlk" />
+
 <meta property="og:site_name" content="Johanna Fulghum"/>
 <meta property="og:title" content="Johanna Fulghum"/>
 <meta property="og:url" content="https://www.susanjfowler.com"/>
 <meta property="og:type" content="website"/>
-<meta property="og:description" content="Writer. Engineer. Fledgling Physicist. Amateur Myrmecologist."/>
+<meta property="og:description" content="Writer. Engineer. Economist."/>
 <meta property="og:image" content="http://static1.squarespace.com/static/57a6de391b631b6aa4789ebf/t/5dd82f25dcadfc116d1e5b99/1574448937925/91t6KiP1cEL.jpg?format=1500w"/>
 <meta property="og:image:width" content="1500"/>
 <meta property="og:image:height" content="2264"/>
@@ -42,9 +35,9 @@
 <meta itemprop="image" content="http://static1.squarespace.com/static/57a6de391b631b6aa4789ebf/t/5dd82f25dcadfc116d1e5b99/1574448937925/91t6KiP1cEL.jpg?format=1500w"/>
 <meta name="twitter:title" content="Johanna Fulghum"/>
 <meta name="twitter:image" content="http://static1.squarespace.com/static/57a6de391b631b6aa4789ebf/t/5dd82f25dcadfc116d1e5b99/1574448937925/91t6KiP1cEL.jpg?format=1500w"/>
-<meta name="twitter:url" content="https://www.susanjfowler.com"/>
+<meta name="twitter:url" content="https://www.johannafulghum.com"/>
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:description" content="Writer. Engineer. Fledgling Physicist. Amateur Myrmecologist."/>
+<meta name="twitter:description" content="Writer. Engineer. Economist."/>
 <meta name="description" content="Writer. Engineer. Economist." />
 <script type="text/javascript" src="//use.typekit.net/ik/5hWUCNeYwic1iSzXcBlxcfus-E-2JuLBCTJH42LKnICfeztgfFHN4UJLFRbh52jhWD9ajQZqZQwowAJhwDBKFcByF2St5AmKZy7dMPG0SamDjAtlZcNademkOAJXdYJ0SaBujW48Sagyjh90jhNlOeUzjhBC-eNDifUDiWFydKucdaiCZWJljRsCSKoDSWmyScmDSeBRZPoRdhXCSamDjAo7ZcNademkOcFzdPUaiaS0SamDjAtlZcNademkOAJXdYJ0SaBujW48Sagyjh90jhNlOYiaikoDiWFydcTcdaiCZWJ0jhNlJ6ZC-WZzS1q7fbRf9gMMeMb6MKG4fwFbIMMj2KMfH6qJUBMbMg6YJMJ7fbRB9gMMegI6MTMg8FHdzb9.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
