--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!doctype html>
+<head>
+  <title> Johanna Fulghum </title>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+
+</head>
+<body>
 <p>
   <div class='menu-container'>
   <a class="nav-bar" href="https://jfulghum.github.io/home/">Home</a> 
@@ -67,3 +73,4 @@
 </div>
 </div>
 </div>
+<body>
