--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
   <a class="nav-bar"href="https://jfulghum.github.io/readinglist/">Reading List</a></p>
 
 </div>
-<intro>
-<h1 class="tagline">Johanna Fulghum</h1> 
-  
-  </intro>
+<div class="name-container">
+<h1 class="name">Johanna Fulghum</h1> 
+</div>
+<div class="tagline-container">
 <div class="tagline">Writer, Economist, Engineer</div>
+</div>
 <div data-type="page" data-updated-on="1579201647568">
 <div>
 <div>
