--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </div>
 <div class="name-container">
-<h1 class="name">Johanna Fulghum</h1> 
+<div class="name">Johanna Fulghum</div> 
 </div>
 <div class="tagline-container">
 <div class="tagline">Writer, Economist, Engineer</div>
