--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
 
 </head>
 <body>
-<p>
-  <div class='menu-container'>
+
+<div class='menu-container'>
   <a class="nav-bar" href="https://jfulghum.github.io/home/">Home</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/">About</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/">Essays</a> 
-  <a class="nav-bar"href="https://jfulghum.github.io/readinglist/">Reading List</a></p>
-
+  <a class="nav-bar"href="https://jfulghum.github.io/readinglist/">Reading List</a>
 </div>
 <div class="name-container">
 <div class="name">Johanna Fulghum</div> 
 </div>
+  
 <div class="tagline-container">
 <div class="tagline">Writer, Economist, Engineer</div>
 </div>
+  
 <div data-type="page" data-updated-on="1579201647568">
 <div>
 <div>
