--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a class="nav-bar"href="https://jfulghum.github.io/readinglist/">Reading List</a>
 </div>
 
-<h1 class="name">Johanna Fulghum</h1> 
+  <strong><div class="name">Johanna Fulghum<div> </strong>
 <br>
 <div class="tagline">Writer, Economist, Engineer</div>
 
