--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a class="nav-bar"href="https://jfulghum.github.io/readinglist/">Reading List</a>
 </div>
 
-<div class="name">Johanna Fulghum<div>
+<div class="name">Johanna Fulghum</div>
 <br>
 <div class="tagline">Writer, Economist, Engineer</div>
 
