--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a class="nav-bar"href="https://jfulghum.github.io/readinglist/">Reading List</a>
 </div>
 
-  <div class="name"><h2>Johanna Fulghum</h2></div>
+  <h2 class="name">Johanna Fulghum</h2>
 <br>
 <div class="tagline">Writer, Economist, Engineer</div>
 
