--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div data-block-type="2">
 <div>
 <h2>My Reading List</h2>
-<p><br />I love to read. I was inspired by the reading lists of other engineers I admire (like Susan Fowler and Patrick Collision) and decided to create my own. 
+<p><br />I love to read. I was inspired by the reading lists of other engineers I admire (like <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a>) and decided to create my own. 
   <br>This year my goal is to read 52 books (one per week.)<br>
   </p>
 </div>
