--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div>
 <h2>Currently Reading</h2>
   <a href=https://www.amazon.com/gp/product/1101906111/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1101906111&linkId=b01211fc3d7e1c33dbda12bd006319a4 target="_blank">The Vegetarian</a>, by Han Kang</p>
-  <p> <a href="">The Sympathizer</a>, by Viet Thanh Nguyen</p>
+  <p> <a href="https://www.amazon.com/gp/product/0802124941/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0802124941&linkId=31dca720cb1c7fca816641bd6a790910">The Sympathizer</a>, by Viet Thanh Nguyen</p>
   </div>
 </div>
 </div>
@@ -62,10 +62,10 @@
 <p>1. <a href="https://www.amazon.com/gp/product/1644450003/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1644450003&linkId=fd31d4136770572b3c31f92ec1fe9a9a" target="_blank">Milkman</a>, by Anna Burns</p>
 </div>
   <h2>2019</h2>
-<p>1. <a href="">Thinking in Systems: A Primer</a>, by Donella H. Meadows</p>
-<p>2. <a href="">Born a Crime</a>, by Trever Noah</p> 
-<p>3. <a href="">Age of Ambition: Chasing Fortune, Truth, and Faith in the New China</a>, by Evan Osnos</p> 
-<p>4. <a target="_blank" href="https://www.amazon.com/gp/product/1732265186/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1732265186&linkCode=as2&tag=johannafulghu-20&linkId=908dde9ca9ade2ac616ff2929449a2fa">An Elegant Puzzle: Systems of Engineering Management</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=johannafulghu-20&l=am2&o=1&a=1732265186" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />An Elegant Puzzle: Systems of Engineering Management</a>, by Will Larson</p> 
+<p>1. <a href="https://www.amazon.com/gp/product/1603580557/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1603580557&linkId=64401f30da28245ef42d2d5a96c14bc3">Thinking in Systems: A Primer</a>, by Donella H. Meadows</p>
+<p>2. <a href="https://www.amazon.com/gp/product/0399588191/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0399588191&linkId=45ffac5a8abc267cb81de6ac9991619c">Born a Crime</a>, by Trever Noah</p> 
+<p>3. <a target="_blank" href="https://www.amazon.com/gp/product/0374535272/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0374535272&linkCode=as2&tag=johannafulghu-20&linkId=07b0a659a66aae25a4a153a350b88180">Age of Ambition: Chasing Fortune, Truth, and Faith in the New China</a>, by Evan Osnos</p> 
+<p>4. <a target="_blank" href="https://www.amazon.com/gp/product/1732265186/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1732265186&linkCode=as2&tag=johannafulghu-20&linkId=908dde9ca9ade2ac616ff2929449a2fa">An Elegant Puzzle: Systems of Engineering Management</a>, by Will Larson</p> 
 </div>
 <div data-block-type="47">
 <div><hr /></div>
