--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title> Johanna Fulghum </title>
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Gelasio|Ibarra+Real+Nova&display=swap" rel="stylesheet">
 
 </head>
 <body>
