--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class='menu-container'>
   <a class="nav-bar" href="https://jfulghum.github.io/home/">Home</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/">About</a> 
-  <a class="nav-bar"href="https://jfulghum.github.io/writing/">Essays</a> 
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/medium">Writing</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/readinglist/">Reading List</a>
 </div>
 
