--- a/medium.html
+++ b/medium.html
@@ -1,5 +1,25 @@
+<!doctype html>
+<head>
+  <title> Johanna Fulghum </title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Gelasio|Ibarra+Real+Nova&display=swap" rel="stylesheet">
+
+</head>
+<body>
+
+<div class='menu-container'>
+  <a class="nav-bar" href="https://jfulghum.github.io/home/">Home</a> 
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/">About</a> 
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/medium.html">Writing</a> 
+  <a class="nav-bar"href="https://jfulghum.github.io/readinglist/">Reading List</a>
+</div>
+
+  <h2 class="name">Johanna Fulghum</h2>
+<div class="tagline">Writer, Economist, Engineer</div>
 
 
 
-
-<a href="https://medium.com/@johanna.fulghum/write-the-fibonacci-sequence-in-every-computational-complexity-9adf5ef12775>Write the Fibonacci sequence… in 4 different computational complexities!<a/>
+<Blog Posts Published on Medium>
+<li> 
+<ul><a href="https://medium.com/@johanna.fulghum/write-the-fibonacci-sequence-in-every-computational-complexity-9adf5ef12775>Write the Fibonacci sequence… in 4 different computational complexities!<a/><ul>
+</li>
