--- a/medium.html
+++ b/medium.html
@@ -21,5 +21,5 @@
 
 <Blog Posts Published on Medium>
 <li> 
-<ul><a href="https://medium.com/@johanna.fulghum/write-the-fibonacci-sequence-in-every-computational-complexity-9adf5ef12775>Write the Fibonacci sequence… in 4 different computational complexities!<a/><ul>
+<ul><a href="https://medium.com/@johanna.fulghum/write-the-fibonacci-sequence-in-every-computational-complexity-9adf5ef12775">Write the Fibonacci sequence… in 4 different computational complexities!<a/><ul>
 </li>
