--- a/medium.html
+++ b/medium.html
@@ -21,5 +21,6 @@
 
 <Blog Posts Published on Medium>
 <li> 
-<ul><a href="https://medium.com/@johanna.fulghum/write-the-fibonacci-sequence-in-every-computational-complexity-9adf5ef12775">Write the Fibonacci sequence… in 4 different computational complexities!<a/><ul>
+<p><a href="https://medium.com/@johanna.fulghum/write-the-fibonacci-sequence-in-every-computational-complexity-9adf5ef12775">Write the Fibonacci sequence… in 4 different computational complexities!</a><p>
+<p><a href="https://medium.com/@johanna.fulghum/underbar-explained-f71ebb3fe006">Underbar, explained. Write your own _.each, _.map, and _.reduce methods in Javascript</a><p>
 </li>
