--- a/medium.html
+++ b/medium.html
@@ -18,9 +18,8 @@
 <div class="tagline">Writer, Economist, Engineer</div>
 
 
-
-<Blog Posts Published on Medium>
-<li> 
+<div>
+<h2>Blog Posts Published on Medium</h2>
 <p><a href="https://medium.com/@johanna.fulghum/write-the-fibonacci-sequence-in-every-computational-complexity-9adf5ef12775">Write the Fibonacci sequence… in 4 different computational complexities!</a><p>
 <p><a href="https://medium.com/@johanna.fulghum/underbar-explained-f71ebb3fe006">Underbar, explained. Write your own _.each, _.map, and _.reduce methods in Javascript</a><p>
-</li>
+</div>
