--- a/medium.html
+++ b/medium.html
@@ -8,10 +8,10 @@
 <body>
 
 <div class='menu-container'>
-  <a class="nav-bar" href="https://jfulghum.github.io/home/">Home</a> 
+  <a class="nav-bar" href="https://jfulghum.github.io/writing/">Home</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/">About</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/medium.html">Writing</a> 
-  <a class="nav-bar"href="https://jfulghum.github.io/readinglist/">Reading List</a>
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/">Reading List</a>
 </div>
 
   <h2 class="name">Johanna Fulghum</h2>
