--- a/games.html
+++ b/games.html
@@ -19,16 +19,15 @@
 
   
 <div>
-<h2Games</h2>
-<p>I love to pair program. Here are some games I've built with friends.>/p>
+<h2>Games</h2>
+<p>I love to pair program. Here are some games I've built with friends.</p>
 
 <p> <a href="https://jfulghum.github.io/teaSet/">Tea Set</a> 
-Tea Set - based on the classic matching card game "Set" designed by Marsha Falco in 1974.
-Tea Set was built over three days by Ralph Salazar, Guilia Lake and Johanna Fulghum. Special thank you to Alex Guevara for the animations.
+
+<p>Based on the classic matching card game "Set", Tea Set was built over three days by Ralph Salazar, Guilia Lake and Johanna Fulghum. </p>
+ <p><a href="https://github.com/jfulghum/Vanilla-Mastermind">Mastermind</a> </p>
+<p>This Mastermind game was created by Giulia Lake and Johanna Fulghum in Javascript, with jasmine as our test suite.
 </p>
-<p><a href="https://github.com/jfulghum/Vanilla-Mastermind">Mastermind</a> 
-<p>This Mastermind game was created by Giulia Lake and Johanna Fulghum using vanilla javascript, html and css3.
-</p>
-<p><a href="https://github.com/jfulghum/Vanilla-Mastermind">https://citybikegirl.herokuapp.com/"</a>Citibike Girl</a>
-<p>Citibike Girl was built by Ana Sanchez and Johanna Fulghum using Phaser, Tiled and TexturePacker.
+<p><a href="https://citybikegirl.herokuapp.com/">Citibike Girl</a>
+Citibike Girl was inspired by biking adventures in NYC, built by Ana Sanchez and Johanna Fulghum.<p>
 </div>
