--- a/games.html
+++ b/games.html
@@ -29,5 +29,5 @@
 <p>This Mastermind game was created by Giulia Lake and Johanna Fulghum in Javascript, with jasmine as our test suite.
 </p>
 <p><a href="https://citybikegirl.herokuapp.com/">Citibike Girl</a>
-Citibike Girl was inspired by biking adventures in NYC, built by Ana Sanchez and Johanna Fulghum.<p>
+Citibike Girl was inspired by biking adventures in NYC, built by Ana Sanchez and Johanna Fulghum.</p>
 </div>
