--- a/games.html
+++ b/games.html
@@ -26,8 +26,8 @@
 
 <p>Based on the classic matching card game "Set", Tea Set was built over three days by Ralph Salazar, Guilia Lake and Johanna Fulghum. </p>
  <p><a href="https://github.com/jfulghum/Vanilla-Mastermind">Mastermind</a> </p>
-<p>This Mastermind game was created by Giulia Lake and Johanna Fulghum in Javascript, with jasmine as our test suite.
+<p>This Mastermind game was created by Giulia Lake and Johanna Fulghum using vanilla Javascript, with jasmine as our test suite.
 </p>
 <p><a href="https://citybikegirl.herokuapp.com/">Citibike Girl</a>
-Citibike Girl was inspired by biking adventures in NYC, built by Ana Sanchez and Johanna Fulghum.</p>
+Inspired by biking adventures in NYC, this game built in Phaser3 by Ana Sanchez and Johanna Fulghum.</p>
 </div>
