--- a/games.html
+++ b/games.html
@@ -22,12 +22,12 @@
 <h2>Games</h2>
 <p>I love to pair program. Here are some games I've built with friends.</p>
 
-<p> <a href="https://jfulghum.github.io/teaSet/">Tea Set</a> 
+<p> <a href="https://jfulghum.github.io/teaSet/">Tea Set</a></p>
 
 <p>Based on the classic matching card game "Set", Tea Set was built over three days by Ralph Salazar, Guilia Lake and Johanna Fulghum. </p>
  <p><a href="https://github.com/jfulghum/Vanilla-Mastermind">Mastermind</a> </p>
 <p>This Mastermind game was created by Giulia Lake and Johanna Fulghum using vanilla Javascript, with jasmine as our test suite.
 </p>
-<p><a href="https://citybikegirl.herokuapp.com/">Citibike Girl</a>
-Inspired by biking adventures in NYC, this game built in Phaser3 by Ana Sanchez and Johanna Fulghum.</p>
+<p><a href="https://citybikegirl.herokuapp.com/">Citibike Girl</a></p>
+<p>Inspired by biking adventures in NYC, this game built in Phaser3 by Ana Sanchez and Johanna Fulghum.</p>
 </div>
