--- a/games.html
+++ b/games.html
@@ -29,5 +29,5 @@
 <p>This Mastermind game was created by Giulia Lake and Johanna Fulghum using vanilla Javascript, with jasmine as our test suite.
 </p>
 <p><a href="https://citybikegirl.herokuapp.com/">Citibike Girl</a></p>
-<p>Inspired by biking adventures in NYC, this game built in Phaser3 by Ana Sanchez and Johanna Fulghum.</p>
+<p>Inspired by biking adventures in NYC, this game was built in Phaser3 by Ana Sanchez and Johanna Fulghum.</p>
 </div>
