--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div class='menu-container'>
   <a class="nav-bar" href="https://jfulghum.github.io/writing/">Home</a> 
-  <a class="nav-bar"href="https://jfulghum.github.io/games/">Games</a> 
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/games/">Games</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/medium.html">Writing</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/">Reading List</a>
 </div>
