--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
 <div class='menu-container'>
-  <a class="nav-bar" href="https://jfulghum.github.io/writing/">Home</a> 
-  <a class="nav-bar"href="https://jfulghum.github.io/writing/games/">Games</a> 
+  <a class="nav-bar" href="https://jfulghum.github.io/writing/home.html">Home</a> 
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/games.html">Games</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/medium.html">Writing</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/">Reading List</a>
 </div>
