--- a/medium.html
+++ b/medium.html
@@ -21,7 +21,7 @@
 
 <div>
 <h2>Engineering Blog Posts</h2>
-<p> I like to write code, words, and words about code! </p>
+<p> I like to write code, words, words about code... </p>
 <p><a href="https://medium.com/@johanna.fulghum/write-the-fibonacci-sequence-in-every-computational-complexity-9adf5ef12775">Write the Fibonacci sequence in 4 different computational complexities</a><p>
 <p><a href="https://medium.com/@johanna.fulghum/underbar-explained-f71ebb3fe006">Underbar, explained.</a> Write your own _.each, _.map, and _.reduce methods in Javascript<p>
 </div>
