--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a class="nav-bar"href="https://jfulghum.github.io/writing/games.html">Games</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/medium.html">Writing</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/">Reading List</a>
-  <a class="nav-bar"href="https://jfulghum.github.io/writing/quotes.html">Quotest</a>
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/quotes.html">Quotes</a>
 </div>
 
   <h2 class="name">Johanna Fulghum</h2>
