--- a/home.html
+++ b/home.html
@@ -28,6 +28,6 @@
 <p>Thank you github pages!</p>
 <p>A little about me, I work as an operations engineer at a healthcare start-up in New York City.</p>
 <p>I also volunteer with <a href="https://codenation.org/">Code Nation</a> to teach html, css, and javascript to underserved high schoolers in the Lower East Side.</p>
-<p>It was really through working with the kids that I was inspired to create this site to begin with.</p>
+<pWorking on web development with the kids inspired me to finally create this site.</p>
 <p>Before moving to New York, I worked as an economist for almost four years in Washington D.C. </p>
 <p>When I'm not reading, writing or coding, I love to play soccer, rock climb, and <a href="https://www.nycgovparks.org/parks/cunningham-park">mountain bike.</a></p>
