--- a/home.html
+++ b/home.html
@@ -30,4 +30,4 @@
 <p>I also volunteer with <a href="https://codenation.org/">Code Nation</a> to teach html, css, and javascript to underserved high schoolers in the Lower East Side.</p>
 <pWorking on web development with the kids inspired me to finally create this site.</p>
 <p>Before moving to New York, I worked as an economist for almost four years in Washington D.C. </p>
-<p>When I'm not reading, writing or coding, I love to play soccer, rock climb, and <a href="https://www.nycgovparks.org/parks/cunningham-park">mountain bike.</a></p>
+<p>When I'm not reading, writing, or coding, I love to play soccer, rock climb, and <a href="https://www.nycgovparks.org/parks/cunningham-park">mountain bike.</a></p>
