--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 <div>
 <h2>Welcome.</h2>
 <p>My name is Johanna Fulghum, and currently this site is a blatant ripoff of Susan Fowler's, an engineer and writer I really admire. </p>
-<p>I was so impressed with her <a href="https://www.susanjfowler.com/reading-list">reading list</a> I decided to create my own. </p>
+<p>I was so impressed with her <a href="https://www.susanjfowler.com/reading-list">reading list</a> I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
 <p>I know I want to write and read more, and I hope being able share it all with you here will motivate me to do just that.</p>
 <p>Thank you github pages!</p>
 <p>A little about me, I work as an operations engineer at a healthcare start-up in New York City.</p>
