--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <div data-block-type="2">
 <div>
 <h2>Currently Reading</h2>
+  <p> <a href="https://www.amazon.com/gp/product/1610391071/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1610391071&linkId=2524c8683e0ea7f014ad0a610b1d07b5">Dancing in the Glory of Monsters: The Collapse of the Congo and the Great War of Africa</a>, by Jason Stearns</p>
   <p> <a href="https://www.amazon.com/gp/product/0802124941/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0802124941&linkId=31dca720cb1c7fca816641bd6a790910">The Sympathizer</a>, by Viet Thanh Nguyen</p>
   </div>
 </div>
