--- a/games.html
+++ b/games.html
@@ -9,7 +9,7 @@
 
 <div class='menu-container'>
   <a class="nav-bar" href="https://jfulghum.github.io/writing/home.html">Home</a> 
-  <a class="nav-bar"href="https://jfulghum.github.io/writing/games/">Games</a> 
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/games.html">Games</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/medium.html">Writing</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/">Reading List</a>
   <a class="nav-bar"href="https://jfulghum.github.io/writing/quotes.html">Quotes</a>
