--- a/quotes.html
+++ b/quotes.html
@@ -10,10 +10,10 @@
 
 <div class='menu-container'>
   <a class="nav-bar" href="https://jfulghum.github.io/writing/home.html">Home</a> 
-  <a class="nav-bar"href="https://jfulghum.github.io/writing/games">Games</a> 
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/games.html">Games</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/medium.html">Writing</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/">Reading List</a>
-  <a class="nav-bar"href="https://jfulghum.github.io/writing/quotes">Quotes</a>
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/quotes.html">Quotes</a>
 </div>
 
   <h2 class="name">Johanna Fulghum</h2>
