--- a/quotes.html
+++ b/quotes.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-  <style> p { padding-left: 16px; } <style>
+  <style> p { padding-left: 16px; } </style>
 
 <div class='menu-container'>
   <a class="nav-bar" href="https://jfulghum.github.io/writing/home.html">Home</a> 
