--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <div>
 <h2>My Reading List</h2>
 <p><br />I love to read. I was inspired by the reading lists of other engineers I admire (like <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a>) and decided to create my own. 
-  <br>This year my goal is to read 52 books (one per week.)<br>
+  <br>I start so many more books than I finish, own way more than I start. I think I only "finished" 6 books in 2019.<br>
+  <br>This year my goal is to read - and finish - 52 books, one per week.<br>
   </p>
 </div>
 </div>
