--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
 
 <div>
 <h2>Welcome.</h2>
+<div class="intro">
 <p>My name is Johanna Fulghum, and currently this site is a blatant ripoff of Susan Fowler's, an engineer and writer I really admire. </p>
 <p>I was so impressed with her <a href="https://www.susanjfowler.com/reading-list">reading list</a> I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
 <p>I know I want to write and read more, and I hope being able share it all with you here will motivate me to do just that.</p>
@@ -31,3 +32,4 @@
 <pWorking on web development with the kids inspired me to finally create this site.</p>
 <p>Before moving to New York, I worked as an economist for almost four years in Washington D.C. </p>
 <p>When I'm not reading, writing, or coding, I love to play soccer, rock climb, and <a href="https://www.nycgovparks.org/parks/cunningham-park">mountain bike.</a></p>
+  </div>
