--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
 <p>1. <a href="https://www.amazon.com/gp/product/1644450003/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1644450003&linkId=fd31d4136770572b3c31f92ec1fe9a9a" target="_blank">Milkman</a>, by Anna Burns</p>
 <p>2. <a href=https://www.amazon.com/gp/product/1101906111/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1101906111&linkId=b01211fc3d7e1c33dbda12bd006319a4 target="_blank">The Vegetarian</a>, by Han Kang</p>
 <p>3. <a href="https://www.amazon.com/gp/product/0802124941/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0802124941&linkId=31dca720cb1c7fca816641bd6a790910">The Sympathizer</a>, by Viet Thanh Nguyen</p>
+<p>4. Tonight I'm Someone Else, by Chelsea Hosdon</p>
+<p>5. Uncle Tom's Cabin, by Harriett Beecher Stowe</p>
+<p>6. Atomic Habits, by James Still</p>
+<p>7. Say Nothing, by  Patrick Radden Keefe</p>
+<p>8. Uncanny Valley, by Anna Wiener</p>
+  
 
   </div>
   <h2>2019</h2>
