--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 <h2>My Reading List</h2>
 <p><br />I love to read. I was inspired by the reading lists of other engineers I admire (like <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a>) and decided to create my own. 
   <br>I start so many more books than I finish, own way more than I start. I think I only "finished" 6 books in 2019.<br>
-  <br>This year my goal is to read - and finish - 52 books, one per week.<br>
+  <br>This year my goal is to read - and finish - 52 books, one per week.
+  
+  <br>I may not reach my goal this year, but I'm still going to try to read a book per week and we'll see how far I get!
   </p>
 </div>
 </div>
