--- a/games.html
+++ b/games.html
@@ -16,7 +16,7 @@
 </div>
 
   <h2 class="name">Johanna Fulghum</h2>
-<div class="tagline">Writer, Economist, Engineer</div>
+<!-- <div class="tagline">Writer, Economist, Engineer</div> -->
 
   
 <div>
