--- a/home.html
+++ b/home.html
@@ -17,14 +17,14 @@
 </div>
 
   <h2 class="name">Johanna Fulghum</h2>
-<div class="tagline">Writer, Economist, Engineer</div>
+<!-- <div class="tagline">Writer, Economist, Engineer</div> -->
 
 
 <div>
 <h2>Welcome.</h2>
 <div class="intro">
-<p>My name is Johanna Fulghum, and currently this site is a blatant ripoff of Susan Fowler's, an engineer and writer I really admire. </p>
-<p>I was so impressed with her <a href="https://www.susanjfowler.com/reading-list">reading list</a> I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
+<p>My name is Johanna Fulghum, and I'm an writer, economist and engineer living on the east coast. </p>
+<p>One day in January 2020 I was feeling very inspired by Susan Fowler's <a href="https://www.susanjfowler.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
 <p>I know I want to write and read more, and I hope being able share it all with you here will motivate me to do just that.</p>
 <p>Thank you github pages!</p>
 <p>A little about me, I work as an operations engineer at a healthcare start-up in New York City.</p>
