--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 <p>3. <a href="https://www.amazon.com/gp/product/0802124941/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0802124941&linkId=31dca720cb1c7fca816641bd6a790910">The Sympathizer</a>, by Viet Thanh Nguyen</p>
 <p>4. Tonight I'm Someone Else, by Chelsea Hosdon</p>
 <p>5. Uncle Tom's Cabin, by Harriett Beecher Stowe</p>
-<p>6. Atomic Habits, by James Still</p>
-<p>7. Say Nothing, by  Patrick Radden Keefe</p>
-<p>8. Uncanny Valley, by Anna Wiener</p>
+<p>6. Whistleblower, by Susan Fowler</p>
+<p>7. Atomic Habits, by James Still</p>
+<p>8. Say Nothing, by  Patrick Radden Keefe</p>
+<p>9. Uncanny Valley, by Anna Wiener</p>
   
 
   </div>
