--- a/index.html
+++ b/index.html
@@ -57,11 +57,14 @@
 <p>2. <a href=https://www.amazon.com/gp/product/1101906111/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1101906111&linkId=b01211fc3d7e1c33dbda12bd006319a4 target="_blank">The Vegetarian</a>, by Han Kang</p>
 <p>3. <a href="https://www.amazon.com/gp/product/0802124941/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0802124941&linkId=31dca720cb1c7fca816641bd6a790910">The Sympathizer</a>, by Viet Thanh Nguyen</p>
 <p>4. Tonight I'm Someone Else, by Chelsea Hosdon</p>
-<p>5. Uncle Tom's Cabin, by Harriett Beecher Stowe</p>
-<p>6. Whistleblower, by Susan Fowler</p>
-<p>7. Atomic Habits, by James Still</p>
-<p>8. Say Nothing, by  Patrick Radden Keefe</p>
-<p>9. Uncanny Valley, by Anna Wiener</p>
+<p>5. The Bell Jar, by Sylvia Plath
+<p>6. Uncle Tom's Cabin, by Harriett Beecher Stowe</p>
+<p>7. Whistleblower, by Susan Fowler</p>
+<p>8. Atomic Habits, by James Still</p>
+<p>9. Say Nothing, by  Patrick Radden Keefe</p>
+<p>10. Uncanny Valley, by Anna Wiener</p>
+<p>11. Station Eleven, by Emily St. John Mandel </p>
+<p>12. Plotting and Writing Suspense Fiction, by Patricia Highsmith </p>
   
 
   </div>
