--- a/index.html
+++ b/index.html
@@ -33,16 +33,11 @@
 </div>
 </div>
 <div data-block-type="47">
-<div><hr /></div>
+<!-- 
 </div>
 </div>
 </div>
-
-
-<div>
-
-</div>
-</div>
+</div> -->
 </div>
 </div>
 <div>
