--- a/index.html
+++ b/index.html
@@ -48,20 +48,7 @@
 <div data-block-type="2">
 <div>
 <h2>2020</h2>
-<p>1. <a href="https://www.amazon.com/gp/product/1644450003/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1644450003&linkId=fd31d4136770572b3c31f92ec1fe9a9a" target="_blank">Milkman</a>, by Anna Burns</p>
-2. <a href=https://www.amazon.com/gp/product/1101906111/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1101906111&linkId=b01211fc3d7e1c33dbda12bd006319a4 target="_blank">The Vegetarian</a>, by Han Kang</p>
-3. <a href="https://www.amazon.com/gp/product/0802124941/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0802124941&linkId=31dca720cb1c7fca816641bd6a790910">The Sympathizer</a>, by Viet Thanh Nguyen</p>
-4. Heart of a Dog, by Mikhail Bulgakov
-5. Tonight I'm Someone Else, by Chelsea Hosdon</p>
-6. The Bell Jar, by Sylvia Plath
-7. Uncle Tom's Cabin, by Harriett Beecher Stowe</p>
-8. Whistleblower, by Susan Fowler</p>
-9. Atomic Habits, by James Still</p>
-10. Say Nothing, by  Patrick Radden Keefe</p>
-11. Uncanny Valley, by Anna Wiener</p>
-12. Station Eleven, by Emily St. John Mandel </p>
-13. Plotting and Writing Suspense Fiction, by Patricia Highsmith </p>
-<!--   
+  
 <p>1. <a href="https://www.amazon.com/gp/product/1644450003/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1644450003&linkId=fd31d4136770572b3c31f92ec1fe9a9a" target="_blank">Milkman</a>, by Anna Burns</p>
 <p>2. <a href=https://www.amazon.com/gp/product/1101906111/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1101906111&linkId=b01211fc3d7e1c33dbda12bd006319a4 target="_blank">The Vegetarian</a>, by Han Kang</p>
 <p>3. <a href="https://www.amazon.com/gp/product/0802124941/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0802124941&linkId=31dca720cb1c7fca816641bd6a790910">The Sympathizer</a>, by Viet Thanh Nguyen</p>
@@ -74,7 +61,7 @@
 <p>10. Say Nothing, by  Patrick Radden Keefe</p>
 <p>11. Uncanny Valley, by Anna Wiener</p>
 <p>12. Station Eleven, by Emily St. John Mandel </p>
-<p>13. Plotting and Writing Suspense Fiction, by Patricia Highsmith </p>   -->
+<p>13. Plotting and Writing Suspense Fiction, by Patricia Highsmith </p>  
 
   </div>
   <h2>2019</h2>
