--- a/home.html
+++ b/home.html
@@ -23,13 +23,11 @@
 <div>
 <h2>Welcome.</h2>
 <div class="intro">
-<p>My name is Johanna Fulghum, and I'm an writer, economist and engineer living on the east coast. </p>
+<p>My name is Johanna Fulghum, and I'm an writer, economist, and engineer living on the east coast. </p>
 <p>One day in January 2020 I was feeling very inspired by Susan Fowler's <a href="https://www.susanjfowler.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
-<p>I know I want to write and read more, and I hope being able share it all with you here will motivate me to do just that.</p>
-<p>Thank you github pages!</p>
-<p>A little about me, I work as an operations engineer at a healthcare start-up in New York City.</p>
-<p>I also volunteer with <a href="https://codenation.org/">Code Nation</a> to teach html, css, and javascript to underserved high schoolers in the Lower East Side.</p>
-<pWorking on web development with the kids inspired me to finally create this site.</p>
-<p>Before moving to New York, I worked as an economist for almost four years in Washington D.C. </p>
+<p>A little about me, I work as an operations engineer at a healthcare start-up in New York City. Before moving to New York, I worked as an economist for almost four years in Washington D.C. and I still feel like one at heart.
+I volunteer with <a href="https://codenation.org/">Code Nation</a> to teach html, css, and javascript to underserved high schoolers in the Lower East Side.</p>
+Working on web development with the kids inspired me to finally create this site.
+</p>
 <p>When I'm not reading, writing, or coding, I love to play soccer, rock climb, and <a href="https://www.nycgovparks.org/parks/cunningham-park">mountain bike.</a></p>
   </div>
