--- a/quotes.html
+++ b/quotes.html
@@ -40,7 +40,7 @@ But I know for a fact I could not do what I do if I was not zealous in managing 
 <div><hr /></div>
 </div>
 <div data-block-type="2"> 
-<p class="quote">"Anyone can learn [software engineering]. Anyone can learn math. Being “good at it” or “smart” is beside the point. If we enacted the same set of rules for being allowed to learn a topic to any other area of study, it would be disastrous: only a select few would be allowed to read Plato, we wouldn’t let people study a foreign language if they weren’t able to learn it in a few weeks, and people wouldn’t be allowed to play guitar unless they had a decent shot at being a famous musician. That is how ridiculous it is." - Susan Fowler  </p>
+<p class="quote">"Anyone can learn physics. Anyone can learn math. Being “good at it” or “smart” is beside the point. If we enacted the same set of rules for being allowed to learn a topic to any other area of study, it would be disastrous: only a select few would be allowed to read Plato, we wouldn’t let people study a foreign language if they weren’t able to learn it in a few weeks, and people wouldn’t be allowed to play guitar unless they had a decent shot at being a famous musician. That is how ridiculous it is." - <a href="https://www.susanjfowler.com/blog/2016/8/26/from-the-fledgling-physicist-archives-if-susan-can-learn-physics-so-can-you">Susan Fowler</a>. I mentally replace "physics" with "software engineering":) </p>
 <div data-block-type="47">
 <div><hr /></div>
 </div>
