--- a/quotes.html
+++ b/quotes.html
@@ -35,7 +35,7 @@ But I know for a fact I could not do what I do if I was not zealous in managing 
 <div><hr /></div>
 </div>
 <div data-block-type="2"> 
-<p class="quote">"But the audience is right. They're always, always right. You hear directors complain that the advertising was lousy, the distribution is no good, the date was wrong to open the film. I don't believe that. The audience is never wrong. Never." - William Friedkin, in a NYT interview</p>
+<p class="quote">"But the audience is right. They're always, always right. You hear directors complain that the advertising was lousy, the distribution is no good, the date was wrong to open the film. I don't believe that. The audience is never wrong. Never." - William Friedkin, in a NYT interview. I first read this on <a href="http://www.paulgraham.com/quo.html?viewfullsite=1"> Paul Graham's quotes page.</a></p>
  <div data-block-type="47">
 <div><hr /></div>
 </div>
