--- a/quotes.html
+++ b/quotes.html
@@ -30,7 +30,7 @@
   "In your life, you will be evaluated on your output... But your input is just as important. If you don’t have good input, you cannot maintain good output.
 
 The problem is no one manages your input. The boss never cares about your input. The boss doesn’t care about what books you read...
-But I know for a fact I could not do what I do if I was not zealous in managing high-quality inputs into my mind every day of my life." - Ted Gioia, on Conversations with Tyler podcast</p>
+But I know for a fact I could not do what I do if I was not zealous in managing high-quality inputs into my mind every day of my life." - <a href="https://conversationswithtyler.com/episodes/ted-gioia/">Ted Gioia, on Conversations with Tyler podcast</a></p>
  <div data-block-type="47">
 <div><hr /></div>
 </div>
