--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 <p>One day in January 2020 I was feeling very inspired by Susan Fowler's <a href="https://www.susanjfowler.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
   <br>
   <p>A little about me, I work as an operations engineer at a healthcare start-up in New York City. Before moving to New York, I worked as an economist for almost four years in Washington D.C. and I still feel like one at heart.
-I volunteer with <a href="https://codenation.org/">Code Nation</a> to teach html, css, and javascript to underserved high schoolers in the Lower East Side. Working on web development with the kids both inspired me and taught me how to create this site.
+I volunteer with <a href="https://codenation.org/">Code Nation</a> to teach HTML, CSS, and Javascript to underserved high schoolers in the Lower East Side. Working on web development with the kids both inspired me and taught me how to create this site.
 </p>
     <br>
 <p>When I'm not reading, writing, or coding, I love to play soccer, rock climb, and <a href="https://www.nycgovparks.org/parks/cunningham-park">mountain bike.</a></p>
