--- a/home.html
+++ b/home.html
@@ -31,5 +31,5 @@
 I volunteer with <a href="https://codenation.org/">Code Nation</a> to teach web development to high schoolers in the Lower East Side twice a week. Working with the kids both inspired me and taught me how to create this site.
 </p>
     <br>
-<p>I have million hobbies, a few of them are soccer, rock climbing, and <a href="https://www.nycgovparks.org/parks/cunningham-park">mountain biking.</a></p>
+<p>I have million hobbies. A few of them are soccer, rock climbing, and <a href="https://www.nycgovparks.org/parks/cunningham-park">mountain biking.</a></p>
   </div>
