--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 <div class="intro">
 <p>My name is Johanna Fulghum, and I'm an writer, economist, and engineer living on the east coast. </p>
   <br>
-<p>One day in January 2020 I was feeling very inspired by Susan Fowler's <a href="https://www.susanjfowler.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
+<p>One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanjfowler.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
   <br>
   <p>A little about me, I work as an operations engineer at a healthcare start-up in New York City. Before moving to New York, I worked as an economist for almost four years in Washington D.C. and I still feel like one at heart.
 I volunteer with <a href="https://codenation.org/">Code Nation</a> to teach web development to high schoolers in the Lower East Side twice a week. Working with the kids both inspired me and taught me how to create this site.
