--- a/home.html
+++ b/home.html
@@ -32,4 +32,6 @@ I volunteer with <a href="https://codenation.org/">Code Nation</a> to teach web 
 </p>
     <br>
 <p>I have million hobbies. A few of them are soccer, rock climbing, and <a href="https://www.nycgovparks.org/parks/cunningham-park">mountain biking.</a></p>
+    <br> 
+<p>In pandemic days, I'm speading more time praciting yoga, lifting, taking long walks in the woods with our collie Antigone, and cooking dishes of varying complexity for my family.</p>
   </div>
