--- a/home.html
+++ b/home.html
@@ -33,5 +33,5 @@ I volunteer with <a href="https://codenation.org/">Code Nation</a> to teach web 
     <br>
 <p>I have million hobbies. A few of them are soccer, rock climbing, and <a href="https://www.nycgovparks.org/parks/cunningham-park">mountain biking.</a></p>
     <br> 
-<p>In pandemic days, I'm speading more time praciting yoga, lifting, taking long walks in the woods with our collie Antigone, and cooking dishes of varying complexity for my family.</p>
+<p>In pandemic days, they are more yoga, lifting, taking long walks in the woods with our collie Antigone, and cooking dishes of varying complexity for my family.</p>
   </div>
