--- a/medium.html
+++ b/medium.html
@@ -16,12 +16,15 @@
 </div>
 
   <h2 class="name">Johanna Fulghum</h2>
-<div class="tagline">Writer, Economist, Engineer</div>
+<!-- <div class="tagline">Writer, Economist, Engineer</div> -->
 
 
 <div>
 <h2>Engineering Blog Posts</h2>
+  <br>
 <p> Here are some blog posts I've written on programming, published on medium. </p>
+  <br>
 <p>1. <a href="https://medium.com/@johanna.fulghum/write-the-fibonacci-sequence-in-every-computational-complexity-9adf5ef12775">Write the Fibonacci sequence in 4 different computational complexities</a><p>
-<p>2. <a href="https://medium.com/@johanna.fulghum/underbar-explained-f71ebb3fe006">Underbar, explained.</a> Write your own _.each, _.map, and _.reduce methods in Javascript<p>
+<br>
+  <p>2. <a href="https://medium.com/@johanna.fulghum/underbar-explained-f71ebb3fe006">Underbar, explained.</a> Write your own _.each, _.map, and _.reduce methods in Javascript<p>
 </div>
