--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 <div data-block-type="2">
 <div>
 <h2>My Reading List</h2>
-<p><br />I love to read. I was inspired by the reading lists of other engineers I admire (like <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a>) and decided to create my own. 
-  <br>I start so many more books than I finish, own way more than I start. I think I only "finished" 6 books in 2019.<br>
+<p>
+  <br/>One day in early January of 2020 I finished a book, and I thought, "My room in covered in books. I want to read them. And it's not too late to pile on another NYE resolution!"  
+  Many of the books in my room are from the reading lists of other engineers I admire (like <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a>) and decided to create my own. 
+  <br>And I'm good at tricking myself into getting stuff done.<br>
+  <br>Why not make my own reading list? Why not set a lofty goal?
   <br>This year my goal is to read - and finish - 52 books, one per week.
   
   <br>I may not reach my goal this year, but I'm still going to try to read a book per week and we'll see how far I get!
