--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p>
   <br/>One day in early January of 2020 I finished a book, and I thought, "My room in covered in books. I want to read them."
   
-  Many of the books in my room are from the reading lists of other engineers I admire (like <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a>) and decided to create my own. 
+  Many of the books in my room are from the reading lists of other engineers I admire (like <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a>). I thought maybe creating my own would inspire me to get going on all the books on my list. 
   <br>And I'm good at tricking myself into getting stuff done.<br>
   <br>Why not make my own reading list? Why not set a lofty goal?
   <br>This year my goal is to read - and finish - 52 books, one per week.
