--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   
   Many of the books in my room are from the reading lists of other engineers I admire (like <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a>). 
   <br>And I'm good at tricking myself into getting stuff done.<br>
-  <br>Why not make my own reading list? And why not set a lofty goal?
+ <br>
   <br>This year my goal is to read - and finish - 52 books, one per week.
-  
-  <br>When the pandemic hit and I had to leave New York, I couldn't read at all. But after about a month, I found that curling up with a book was a peaceful and satisifying escape. I may not reach my goal this year, but I might. I'm only 7 books behind, and what else am I doing. 
+  <br>
+  <br>When the pandemic hit and I had to leave New York, I found I couldn't read at all. But after about a month, curling up with a book was a peaceful and satisifying escape. I may not reach my goal this year, but I might. I'm only 7 books behind, and what else am I doing. 
   </br>I'm still going to try to read a book per week and we'll see how far I get!
   </p>
 </div>
