--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
  <br>
   <br>This year my goal is to read - and finish - 52 books, one per week.
   <br>
-  <br>When the pandemic hit and I had to leave New York, I found I couldn't read at all. But after about a month, curling up with a book was a peaceful and satisifying escape. I may not reach my goal this year, but I might. I'm only 7 books behind, and what else am I doing. 
+  <br>When the pandemic hit and I had to leave New York, I found I couldn't read at all. But after about a month, curling up with a book - or listening to one on a long walk because I count those too - to be a peaceful and satisifying escape. I may not reach my goal this year, but I might. I'm only 7 books behind, and what else am I doing. 
   </br>I'm still going to try to read a book per week and we'll see how far I get!
   </p>
 </div>
