--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <br/>One day in early January of 2020 I finished a book, and I thought, "My room in covered in books. I want to read them."
   
   Many of the books in my room are from the reading lists of other engineers I admire (like <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a>). 
-  <br>And I'm good at tricking myself into getting stuff done.<br>
- <br>
+And I'm good at tricking myself into getting stuff done.<br>
+
   <br>This year my goal is to read - and finish - 52 books, one per week.
   <br>
   <br>When the pandemic hit and I had to leave New York, I found I couldn't read at all. But after about a month, curling up with a book - or listening to one on a long walk because I count those too - to be a peaceful and satisifying escape. I may not reach my goal this year, but I might. I'm only 7 books behind, and what else am I doing. 
