--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ And I'm good at tricking myself into getting stuff done.<br>
   <br>
   <br>When the pandemic hit and I had to leave New York, I found I couldn't read at all. But after about a month, curling up with a book - or listening to one on a long walk because I count those too - to be a peaceful and satisifying escape. I may not reach my goal this year, but I might. I'm only 7 books behind, and what else am I doing. 
   </br>I'm still going to try to read a book per week and we'll see how far I get!
-  <p> Books that I especially loved are in green.</p>
+  <p> Books that I especially loved are in <em style="color:green;">green.</em></p>
   </p>
   
 </div>
