--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ And I'm good at tricking myself into getting stuff done.<br>
 <p>13. Plotting and Writing Suspense Fiction, by Patricia Highsmith </p>  
 <p>14. Calypso, by David Sedaris </p>  
 <p style="color:green;">15. The First Bad Man, By Miranda July</p>
+<p>16. Severance, by Ling Ma</p>
 
   </div>
   <h2>2019</h2>
@@ -78,7 +79,8 @@ And I'm good at tricking myself into getting stuff done.<br>
 <p>3. <a target="_blank" href="https://www.amazon.com/gp/product/0374535272/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0374535272&linkCode=as2&tag=johannafulghu-20&linkId=07b0a659a66aae25a4a153a350b88180">Age of Ambition: Chasing Fortune, Truth, and Faith in the New China</a>, by Evan Osnos</p>
 <p>4. <a target="_blank" href="https://www.amazon.com/gp/product/1732265186/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1732265186&linkCode=as2&tag=johannafulghu-20&linkId=908dde9ca9ade2ac616ff2929449a2fa">An Elegant Puzzle: Systems of Engineering Management</a>, by Will Larson</p>
 <p>5. <a target="_blank" href="https://www.amazon.com/gp/product/1590179269/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1590179269&linkId=cdb885a7a2ce9b1ff0099f757accbe8d">The Cowshed: Memories of the Chinese Cultural Revolution</a>, by Ji Xianlin</p>
-<p style="color:green;">6. <a href="https://www.amazon.com/gp/product/0399590501/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0399590501&linkId=d809cf5cbd651f7319802fdde028e30c">Educated</a> by Tara Westover</p>
+<p style="color:green;">6. Educated, by Tara Westover</p>
+<p style="color:green;"> 7. The Last Kingdom, by Bernard Cornwell</p>
   </div>
 <div data-block-type="47">
 <div><hr /></div>
