--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@ And I'm good at tricking myself into getting stuff done.<br>
 <p>5. Tonight I'm Someone Else, by Chelsea Hodson</p>
 <p>6. The Bell Jar, by Sylvia Plath
 <p>7. Uncle Tom's Cabin, by Harriett Beecher Stowe</p>
-<p>8. Whistleblower, by Susan Fowler</p>
+<p>8. Whistleblower, by Susan Fowler <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>
 <p>9. Atomic Habits, by James Still</p>
 <p>10. Say Nothing, by  Patrick Radden Keefe</p>
 <p>11. Uncanny Valley, by Anna Wiener</p>
 <p>12. Station Eleven, by Emily St. John Mandel </p>
 <p>13. Plotting and Writing Suspense Fiction, by Patricia Highsmith </p>  
 <p>14. Calypso, by David Sedaris </p>  
-<p style="color:green;">15. The First Bad Man, By Miranda July</p>
-<p>16. Severance, by Ling Ma</p>
+<p style="color:green;">15. The First Bad Man, By Miranda July <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>
+<p>16. Severance, by Ling Ma <span>&#11089;</span><span>&#11089;</span></p>
 
   </div>
   <h2>2019</h2>
