--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@ And I'm good at tricking myself into getting stuff done.<br>
 <p>4. <a target="_blank" href="https://www.amazon.com/gp/product/1732265186/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1732265186&linkCode=as2&tag=johannafulghu-20&linkId=908dde9ca9ade2ac616ff2929449a2fa">An Elegant Puzzle: Systems of Engineering Management</a>, by Will Larson <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>
 <p>5. <a target="_blank" href="https://www.amazon.com/gp/product/1590179269/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1590179269&linkId=cdb885a7a2ce9b1ff0099f757accbe8d">The Cowshed: Memories of the Chinese Cultural Revolution</a>, by Ji Xianlin <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p></p>
 <p style="color:green;">6. Educated, by Tara Westover <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p></p>
-<p style="color:green;"> 7. The Last Kingdom, by Bernard Cornwell <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p></p>
+<p style="color:green;"> 7. The Last Kingdom, by Bernard Cornwell 
+  <span class="e-item-card-recently-viewed_stars">
+  <span class="m-item-card-recently-viewed_stars__orange">
+    ★★★★</span>
+</span></p></p>
   </div>
 <div data-block-type="47">
 <div><hr /></div>
