--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ And I'm good at tricking myself into getting stuff done.<br>
 <p>11. Uncanny Valley, by Anna Wiener ★★</p>
 <p>12. Station Eleven, by Emily St. John Mandel ★★</p>
 <p>13. Plotting and Writing Suspense Fiction, by Patricia Highsmith ★★★</p>  
-<p>14. Calypso, by David Sedaris ★★★1/2<</p>  
+<p>14. Calypso, by David Sedaris ★★★1/2</p>  
 <p style="color:green;">15. The First Bad Man, By Miranda July ★★★★</p>
 <p>16. Severance, by Ling Ma ★★</p>
 
