--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 <div>
 <h2>My Reading List</h2>
 <p>
-  <br/>One day in early January of 2020 I finished a book, and I thought, "My room in covered in books. I want to read them."
+  <br/>The purpose of this list is TBD. It does motivate me to read more, and I would also like to start writing reviews. This list is the beginning.
   
   Many of the books in my room are from the reading lists of other engineers I admire (like <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a>). 
 <br>
 
-  <br>This year my goal is to read - and finish - 52 books, one per week. So far I am noticing that I am forcing myself to finish books that I don't care for and would normally put down. My hope I will get better at choosing books I enjoy and that I will read more 4 and 3.5 star books in 2020 than I did in 2019, by volume alone.
+  <br>This year my goal is to read - and finish - 52 books, one per week. 16 books in this year, I am noticing that I am forcing myself to finish books that I don't care for and would normally put down. My hope I will get better at choosing books I enjoy and that I will read more 4 and 3.5 star books in 2020 than I did in 2019, by volume alone.
   <br>
   <p> Books that I especially loved are in <em style="color:green;">green.</em></p>
   </p>
