--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
 
   <br>This year my goal is to read - and finish - 52 books, one per week. 16 books in this year, I am noticing that I am forcing myself to finish books that I don't care for and would normally put down. My hope I will get better at choosing books I enjoy and that I will read more 4 and 3.5 star books in 2020 than I did in 2019, by volume alone.
   <br>
+  ★★ is Not Great. Can't recommend.
+  ★★1/2 Okay, didn't do it for me.
+  ★★★ Good, enjoyable & overall yes recommendation. 
+  ★★★1/2  Very Good, strong recommendation. 
+  ★★★★ In Love. 
+  
   <p> Books that I especially loved are in <em style="color:green;">green.</em></p>
   </p>
   
@@ -80,7 +86,9 @@
 <p>4. <a target="_blank" href="https://www.amazon.com/gp/product/1732265186/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1732265186&linkCode=as2&tag=johannafulghu-20&linkId=908dde9ca9ade2ac616ff2929449a2fa">An Elegant Puzzle: Systems of Engineering Management</a>, by Will Larson ★★★1/2</p>
 <p>5. <a target="_blank" href="https://www.amazon.com/gp/product/1590179269/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1590179269&linkId=cdb885a7a2ce9b1ff0099f757accbe8d">The Cowshed: Memories of the Chinese Cultural Revolution</a>, by Ji Xianlin ★★★★ </p>
 <p style="color:green;">6. Educated, by Tara Westover ★★★★</p></p>
-<p>7. The Last Kingdom, by Bernard Cornwell ★★★★</p></p>
+<p>7. The Last Kingdom, by Bernard Cornwell ★★★★</p>
+<p>8.Stubborn Attachments, by Tyler Cowen★★★</p>
+  
   </div>
 <div data-block-type="47">
 <div><hr /></div>
