--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
   <br>This year my goal is to read - and finish - 52 books, one per week. 16 books in this year, I am noticing that I am forcing myself to finish books that I don't care for and would normally put down. My hope I will get better at choosing books I enjoy and that I will read more 4 and 3.5 star books in 2020 than I did in 2019, by volume alone.
   <br>
   ★★ is Not Great. Can't recommend.
+   <br>
   ★★1/2 Okay, didn't do it for me.
+   <br>
   ★★★ Good, enjoyable & overall yes recommendation. 
+   <br>
   ★★★1/2  Very Good, strong recommendation. 
-  ★★★★ In Love. 
-  
-  <p> Books that I especially loved are in <em style="color:green;">green.</em></p>
+   <br>
+  ★★★★ In Love. <p> Books that I especially loved are in <em style="color:green;">green.</em></p>
+   <br>
   </p>
   
 </div>
