--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <br>
   ★★★1/2  Very Good, strong recommendation. 
    <br>
-  ★★★★ In Love. <p> Books that I especially loved are in <em style="color:green;">green.</em></p>
+  ★★★★ In Love. Books that I especially loved are in <em style="color:green;">green.</em>
    <br>
   </p>
   
