--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <p>14. Calypso, by David Sedaris ★★★1/2</p>  
 <p style="color:green;">15. The First Bad Man, By Miranda July ★★★★</p>
 <p>16. Severance, by Ling Ma ★★</p>
-
+<p>17. Fates and Furies, by Lauren Groff ★★★★</p>
   </div>
   <h2>2019</h2>
 
