--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 <p style="color:green;">15. The First Bad Man, By Miranda July ★★★★</p>
 <p>16. Severance, by Ling Ma ★★</p>
 <p>17. Fates and Furies, by Lauren Groff ★★★★</p>
+<p>18. White Fragility, by Robin DiAngelo ★★★1/2</p>
   </div>
   <h2>2019</h2>
 
