--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 <p>16. Severance, by Ling Ma ★★</p>
 <p>17. Fates and Furies, by Lauren Groff ★★★★</p>
 <p>18. White Fragility, by Robin DiAngelo ★★★1/2</p>
+<p>19. The Toyota Way, by Jeffrey Liker ★★★</p>
+p> 20. Circe, by Madeline Miller ★★★★</p>
   </div>
   <h2>2019</h2>
 
