--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <p>17. Fates and Furies, by Lauren Groff ★★★★</p>
 <p>18. White Fragility, by Robin DiAngelo ★★★1/2</p>
 <p>19. The Toyota Way, by Jeffrey Liker ★★★</p>
-p> 20. Circe, by Madeline Miller ★★★★</p>
+<p>20. Circe, by Madeline Miller ★★★★</p>
   </div>
   <h2>2019</h2>
 
