--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 <p>18. White Fragility, by Robin DiAngelo ★★★1/2</p>
 <p>19. The Toyota Way, by Jeffrey Liker ★★★</p>
 <p>20. Circe, by Madeline Miller ★★★★</p>
+<p>21. Florida, by Lauren Groff ★★★★</p>
   </div>
   <h2>2019</h2>
 
