--- a/games.html
+++ b/games.html
@@ -27,7 +27,7 @@
 
 <p>Based on the classic matching card game "Set", Tea Set was built over three days by Ralph Salazar, Guilia Lake and Johanna Fulghum. </p>
 <br>
-  <p><a href="https://github.com/jfulghum/Vanilla-Mastermind">Mastermind</a> </p>
+  <p><a href="https://jfulghum.github.io/Vanilla-Mastermind/">Mastermind</a> </p>
 <p>This Mastermind game was created by Giulia Lake and Johanna Fulghum using vanilla Javascript, with jasmine as our test suite.
 </p>
   <br>
